@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-10T08:27:34Z",
-  "count_outdated" : 449,
-  "uniques_outdated" : 40,
-  "count" : 609,
-  "uniques" : 46,
+  "timestamp" : "2022-08-11T08:27:26Z",
+  "count_outdated" : 450,
+  "uniques_outdated" : 41,
+  "count" : 610,
+  "uniques" : 47,
   "views" : [
-    {
-      "timestamp": "2022-07-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-29T00:00:00Z",
       "count": 1,
@@ -44,6 +37,13 @@
       "timestamp": "2022-08-10T00:00:00Z",
       "count": 8,
       "count_minmax": [ 8, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
