@@ -3,11 +3,6 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-07-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-29T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -30,6 +25,11 @@
     {
       "timestamp": "2022-08-10T00:00:00Z",
       "count": 8,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-11T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
